Added Github page to get source code directly from the app!

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,6 @@
         မီးလွင်ႈသင်သေ ဢမ်ႇဝႃႈ ပၼ်တၢင်းႁၼ်ထိုင်မႃးတီႈ Facebook ၸုမ်းႁဝ်းၶႃႈ ထုင်ႉမၢဝ်းၶမ်း လႆႈယူႇၶႃႈ။\n
     </string>
     <string name="our_slogan">ႁဝ်းမႃး ႁူမ်ႈႁွမ်းလႅၵ်ႈလၢႆႈ\n ၸႂ်ႉတိုဝ်းယူႇၼီႇၶူတ့်ၵၼ်လႄႈ</string>
+    <string name="zawgyi">Zawgyi</string>
+    <string name="unicode">Unicode</string>
 </resources>
